--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Rpibell">
+
         <activity android:name=".LoginPage"
             android:label="Log In Page">
             <intent-filter>
@@ -18,9 +19,19 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity"
-            android:label="Live Stream"
+        <activity android:name=".UserHomePage"
+            android:label="User Page"
             android:parentActivityName=".LoginPage">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".LiveViewPage"
+            android:label="Live Stream"
+            android:parentActivityName=".UserHomePage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,7 +41,7 @@
 
     </application>
 
-    
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
