Got the media page set up and running

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         </service>
 
         <activity android:name=".UserHomePage"
-            android:label="User Page"
+            android:label="Home Page"
             android:parentActivityName=".LoginPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -52,7 +52,7 @@
         </activity>
 
         <activity android:name=".LiveViewPage"
-            android:label="Live Stream"
+            android:label="Live Stream Page"
             android:parentActivityName=".UserHomePage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -60,6 +60,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".MediaPage"
+            android:label="Media Page"
+            android:parentActivityName=".UserHomePage">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
