--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Rpibell"
-        android:requestLegacyExternalStorage="true">
+        android:theme="@style/Theme.Rpibell">
 
-        <activity android:name=".LoginPage"
-            android:label="Log In Page">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".LoginPage"
+            android:label="Log In Page">
         </activity>
         <service android:name=".MyFirebaseMessagingService"
 
@@ -31,8 +33,12 @@
 
         </service>
 
+        <activity android:name=".SignUpPage"
+            android:parentActivityName=".LoginPage"
+            />
+
         <activity android:name=".UserHomePage"
-            android:label="Home Page"
+            android:label="User Page"
             android:parentActivityName=".LoginPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -52,7 +58,7 @@
         </activity>
 
         <activity android:name=".LiveViewPage"
-            android:label="Live Stream Page"
+            android:label="Live Stream"
             android:parentActivityName=".UserHomePage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -60,20 +66,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".MediaPage"
-            android:label="Media Page"
-            android:parentActivityName=".UserHomePage">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 </manifest>
