--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rpibell">
 
-    <application android:usesCleartextTraffic="true"
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Rpibell">
-
+        android:theme="@style/Theme.Rpibell"
+        android:usesCleartextTraffic="true">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,27 +20,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".LoginPage"
+            android:label="Log In Page" />
 
-        <activity android:name=".LoginPage"
-            android:label="Log In Page">
-        </activity>
-        <service android:name=".MyFirebaseMessagingService"
-
+        <service
+            android:name=".MyFirebaseMessagingService"
             android:exported="false">
-
             <intent-filter>
-
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
-
             </intent-filter>
-
         </service>
 
-        <activity android:name=".SignUpPage"
-            android:parentActivityName=".LoginPage"
-            />
-
-        <activity android:name=".UserHomePage"
+        <activity
+            android:name=".SignUpPage"
+            android:parentActivityName=".LoginPage" />
+        <activity
+            android:name=".UserHomePage"
             android:label="User Page"
             android:parentActivityName=".LoginPage">
             <intent-filter>
@@ -47,8 +46,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".SettingsPage"
-            android:label="Settings Page"
+        <activity
+            android:name=".GuestManagement"
+            android:label="Guest Management"
             android:parentActivityName=".UserHomePage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -57,7 +57,28 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".LiveViewPage"
+        <activity android:name=".AddingGuest"
+            android:label="Add a Guest"
+            android:parentActivityName=".GuestManagement">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".SettingsPage"
+            android:label="Settings Page"
+            android:parentActivityName=".UserHomePage">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".LiveViewPage"
             android:label="Live Stream"
             android:parentActivityName=".UserHomePage">
             <intent-filter>
@@ -67,6 +88,5 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 </manifest>
