--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,74 +2,108 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rpibell">
 
-    <application android:usesCleartextTraffic="true"
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Rpibell"
-        android:requestLegacyExternalStorage="true">
-
-        <activity android:name=".MainActivity"
-            android:label="">
+        android:usesCleartextTraffic="true">
+        
+        <activity
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-
-        <activity android:name=".LoginPage"
-            android:label=""
+        
+        <activity
+            android:name=".LoginPage"
             android:parentActivityName=".MainActivity">
         </activity>
 
-        <activity android:name=".SignUpPage"
-            android:label=""
-            android:parentActivityName=".MainActivity">
+        
+        <activity
+            android:name=".SignUpPage"
+            android:parentActivityName=".ChooseNewAccountTypePage">
         </activity>
 
-
-        <service android:name=".MyFirebaseMessagingService"
+        
+        <service
+            android:name=".MyFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
-
-        <activity android:name=".UserHomePage"
-            android:label="Home Page"
+        
+        <activity
+            android:name=".UserHomePage"
             android:parentActivityName=".LoginPage">
         </activity>
 
+        
+        <activity
+            android:name=".NotificationPage"
+            android:parentActivityName=".UserHomePage">
+        </activity>
 
-        <activity android:name=".SettingsPage"
-            android:label="Settings Page"
+        
+        <activity
+            android:name=".SettingsPage"
+            android:parentActivityName=".UserHomePage">
+        </activity>
+
+        
+        <activity
+            android:name=".LiveViewPage"
+            android:parentActivityName=".UserHomePage">
+        </activity>
+
+        
+        <activity
+            android:name=".MediaPage"
             android:parentActivityName=".UserHomePage">
         </activity>
 
 
-
-        <activity android:name=".LiveViewPage"
-            android:label="Live Stream Page"
+        <activity
+            android:name=".GuestManagement"
             android:parentActivityName=".UserHomePage">
         </activity>
 
 
-
-        <activity android:name=".MediaPage"
-            android:label="Media Page"
-            android:parentActivityName=".UserHomePage">
+        <activity
+            android:name=".AddingGuest"
+            android:parentActivityName=".GuestManagement">
         </activity>
+
+        <activity
+            android:name=".AdminInfoPage"
+            android:parentActivityName=".GuestManagement">
+        </activity>
+
+        <activity
+            android:name=".ChooseNewAccountTypePage"
+            android:parentActivityName=".MainActivity">
+        </activity>
+
+        <activity
+            android:name=".guestSignUpPage"
+            android:parentActivityName=".ChooseNewAccountTypePage">
+        </activity>
+        
 
 
     </application>
 
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 </manifest>
